# EmbeddedUI

./: README.md  app.py  main.py  pyproject.toml  tornadoApp.py
sensor/: pseudosensor.py
web/: index.html  script.js
widgets/: sensorUI.py
